tests/baselines/reference/objectLiteralMemberWithModifiers2.errors.txt
tests/cases/compiler/objectLiteralMemberWithModifiers2.ts(1,11): error TS1042: 'public' modifier cannot be used here.
tests/cases/compiler/objectLiteralMemberWithModifiers2.ts(1,22): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/objectLiteralMemberWithModifiers2.ts(1,22): error TS2378: A 'get' accessor must return a value.


==== tests/cases/compiler/objectLiteralMemberWithModifiers2.ts (3 errors) ====
    var v = { public get foo() { } }
              ~~~~~~
!!! error TS1042: 'public' modifier cannot be used here.
                         ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                         ~~~
!!! error TS2378: A 'get' accessor must return a value.